project_sources/collector/fixtures/powershell_analysis/bad/source_part_drift.ps1
$SourcePartHash = "sha256-current-source"
$GeneratedOutputHash = "sha256-stale-generated"
Write-Output "Generated output was not rebuilt from source parts"
